# Zimbot

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  current_requirements.txt  directory_tree.txt  generate_directory_tree.py  index.html  installed_packages.txt  print_tree.py  pyproject.toml  pytest.ini  pytest.ini.bak  replace_jose_with_pyjwt.py  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements.in  requirements.txt  requirements_backup.txt  setup.py  start_ngrok.py  test.proto  test_livekit.py  test_pb2.py  upgrade_packages.py
alembic/: env.py
config/: config.yaml
docs/: api_docs.md  deployment_guide.md
docs/source/: conf.py  index.rst
livekit/agent/: __init__.py
livekit/livekit_api/: setup.py
livekit/livekit_api/livekit/api/: __init__.py  _service.py  access_token.py  twirp_client.py
livekit/livekit_api/tests/: test_webhook.py
livekit/livekit_protocol/: setup.py
livekit/livekit_protocol/livekit/protocol/: __init__.py  agent.pyi  agent_dispatch.pyi  analytics.py  cloud_replay_pb2.py  livekit_agent_dispatch_pb2.py  livekit_agent_pb2.py  livekit_analytics_pb2.py  livekit_egress_pb2.py  livekit_ingress_pb2.py  livekit_internal_pb2.py  livekit_metrics_pb2.py  livekit_models_pb2.py  livekit_room_pb2.py  livekit_rtc_pb2.py  livekit_sip_pb2.py  livekit_webhook_pb2.py  models.py  room.py  sip.py  sip.pyi  webhook.pyi
livekit/livekit_protocol/livekit_protocol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
livekit/livekit_protocol/proto_files/: compile_protos.py
livekit/livekit_protocol/protocol/: cloud_replay_pb2.py  livekit_agent_dispatch_pb2_grpc.py  livekit_agent_pb2.py  livekit_agent_pb2_grpc.py  livekit_analytics_pb2_grpc.py  livekit_ingress_pb2.py  livekit_ingress_pb2_grpc.py  livekit_internal_pb2.py  livekit_metrics_pb2.py  livekit_room_pb2.py  livekit_room_pb2_grpc.py  livekit_rtc_pb2.py  livekit_rtc_pb2_grpc.py  livekit_sip_pb2.py  livekit_sip_pb2_grpc.py  livekit_webhook_pb2.py  livekit_webhook_pb2_grpc.py
livekit/livekit_rtc/: generate_proto.sh  pyproject.toml  setup.py
livekit/livekit_rtc/livekit_rtc.egg-info/: SOURCES.txt
livekit/livekit_rtc/tests/: test_chat.py  test_resampler.py
proto/assistants/v1/: assistant.proto
proto/bots/v1/: bot.proto
proto/rooms/v1/: room.proto
src/: __init__.py  __main__.py
src/zimbot/: __init__.py  main.py  py.typed
src/zimbot/api/: __init__.py  auth.py  consult.py  health.py  market.py  router_config.py  subscriptions.py
src/zimbot/assistants/: __init__.py
src/zimbot/assistants/client/: assistant_manager_client.py
src/zimbot/assistants/types/: types.py
src/zimbot/bots/: __init__.py  assistant.py  bot.py  room.py
src/zimbot/bots/client/: bot_service_client.py
src/zimbot/bots/types/: types.py
src/zimbot/core/auth/: auth_dependencies.py
src/zimbot/core/auth/schemas/: types.py
src/zimbot/core/auth/services/: __init__.py  auth_service.py
src/zimbot/core/config/: __init__.py  additional_config.py  api_config.py  aws_config.py  base.py  celery_config.py  coinapi_config.py  config.yaml  config_logger.py  cors_config.py  debug_config.py  exceptions.py  filters.py  jwt_config.py  livecoinwatch_config.py  livekit_config.py  logging_config.py  ngrok_config.py  openai_config.py  prometheus_config.py  rate_limit_config.py  redis_config.py  settings.py  streaming_config.py  stripe_config.py  telegram_bot_config.py
src/zimbot/core/integrations/: dependencies.py
src/zimbot/core/integrations/client/: crypto_client.py
src/zimbot/core/integrations/email/: email_service.py
src/zimbot/core/integrations/exceptions/: __init__.py  exceptions.py
src/zimbot/core/integrations/livekit/: dependencies.py
src/zimbot/core/integrations/openai/: dependencies.py  error_handler.py  exceptions.py  metrics.py  (+1 more)
src/zimbot/core/models/: __init__.py  audit_log.py  base.py  encrypted_fields.py  portfolio.py  portfolio_asset.py  refresh_token.py  role.py  session_role.py  user.py  user_session.py  utils.py
src/zimbot/core/secrets/: __init__.py  alerting.py  aws_client_manager.py  caching.py  circuit_breaker.py  decorators.py  encryption_manager.py  encryption_service.py  environment.py  error_handling.py  exceptions.py  health_check.py  key_derivation.py  key_storage.py  metrics.py  metrics_decorators.py  metrics_server.py  redis_client_manager.py  rotation.py  secondary_cache.py  secrets_client.py  secrets_config.py  secrets_logger.py  secrets_manager.py  secrets_retriever.py
src/zimbot/core/utils/: logger.py  utils.py
src/zimbot/finance/: __init__.py
src/zimbot/finance/client/: finance_data_client.py
src/zimbot/finance/internal/: __init__.py  dependencies.py  formatters.py  livecoinwatch.py
src/zimbot/finance/types/: __init__.py  core_metrics.py  external_providers.py  livecoinwatch_types.py  types.py
src/zimbot/livekit/agent/: __init__.py
src/zimbot/livekit/livekit_api/: README.md
src/zimbot/livekit/livekit_protocol/: generate_proto.sh  setup.py
src/zimbot/livekit/livekit_rtc/: README.md
src/zimbot/protocol/utils/: math.go
src/zimbot/rooms/client/: room_management_client.py
src/zimbot/rooms/types/: types.py
tests/: __init__.py  test_livekit.py  test_protobuf.py
tests/config/: test_config.py  test_config_loading.py  test_import_openai.py  test_secret_manager.py
tests/integration/api/: test_auth_endpoint.py  test_market_endpoint.py
tests/integration/finance/: test_client.py
tests/integration/messaging/assistants/: test_manager.py
tests/integration/openai/: test_config.py  test_openai_client.py
tests/integration/services/zimbot/: test_zimbot_integrations.py
tests/unit/assistants/internal/: test_factory.py
tests/unit/core/models/: test_models.py  test_refresh_token.py
tests/unit/finance/: test_finance_client.py
tests/unit/finance/client/: test_finance_client_logic.py
tests/unit/finance/internal/: test_formatters.py
tests/unit/secrets/: test_secrets_manager.py  test_secrets_retriever.py
venv_backup/: pyvenv.cfg
venv_backup/Scripts/: activate  activate.bat
zimbot/: pyvenv.cfg
(+61 files in other folders)
